# arghdice

./: .gitignore  Cargo.toml  LICENSE  README.md
arghdicelib/: Cargo.toml
arghdicelib/src/: lib.rs
arghdiceserver/: Cargo.toml
arghdiceserver/src/: main.rs
src/: logic.rs  main.rs
