[package]
name = "arghdiceserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arghdicelib = { path = "../arghdicelib" }

yew = { version = "0.20.0", features = ["csr"] }
getrandom = { version = "0.2", features = ["js"] }